# bully-alg

./: Cargo.toml  Dockerfile  start.sh
kubernetes/: get-cookies-deployment.yaml  get-pods-service.yaml  permissions.yaml  website-service.yaml
src/: main.rs
website/: fortune_js.js  kub_test.css  test_kubernetes.html
