[package]
name = "leader-election"
version = "0.1.0"
edition = "2024"

[dependencies]
dns-lookup = "3.0.1"
futures = "0.3.31"
rand = "0.9.2"
reqwest = "0.12.24"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.228"
kube = { version = "2.0.1", features = ["runtime", "client"] }
k8s-openapi = { version = "0.26.0", features = ["v1_30"]}

[dependencies.uuid]
version = "1.18.1"
# Lets you generate random UUIDs
features = [
    "v4",
    "serde",
]

